[project]
name = "project-hailml"
version = "0.1.0"
description = "Project-HAILML is a repo for integrating custom models into Open WebUI using Ray Serve"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "black>=25.1.0",
    "open-webui>=0.6.5",
    "pre-commit>=4.3.0",
    "ray[serve]>=2.49.0",
    "uv>=0.8.14",
]
